Changed: Corrected Review.css for better alignment

--- a/src/styles/Review.css
+++ b/src/styles/Review.css
@@ -1,39 +1,40 @@
 /* Put Review CSS here */
-.Review
-{
+.Review {
   display: flex;
+  flex-direction: column;
 }
 
-.review-details{
-    width: 20%;
-    height: 50px;
-    
-    text-align: left;
-    box-sizing: border-box;
-}  
-
-.side-content{
-    width: 12%;
-    height: 100px;
-    
-    text-align: left;
-    box-sizing: border-box;
-    margin-left: 50px;
-    margin-top: 120px;
-    margin-right: 0px;
+.review-body {
+  display: flex;
+  height: 100vh;
+  gap: 24px;
+}
+.review-details {
+  width: 100%;
+  height: fit-content;
+  text-align: left;
+  box-sizing: border-box;
 }
 
-.review-details-text
-{
+.side-content {
+  width: 12%;
+  height: fit-content;
+  text-align: left;
+  box-sizing: border-box;
+  margin-left: 50px;
+  margin-top: 120px;
+  margin-right: 0px;
+}
+
+.review-details-text {
   height: 350px;
   width: 350px;
- 
+
   margin-top: 90px;
-  
 }
 
-.button {
-    /* background-color: white;
+.tag {
+  /* background-color: white;
     border-color: brown;
     color: brown;
     padding: 20px;
@@ -47,15 +48,17 @@
     margin: 4px 2px;
     border-radius: 40px; */
 
-    padding:.2rem .6rem;
-    background: white;
-    color: brown;
-    cursor: pointer;
-    margin-top: 1rem;
-    margin-left: 7px;
-    font-size: 0.8rem;
-    border-radius: 5rem;
-    border-color: brown;
-    height: 1.7rem;
-    width: 4.6rem;
-  }
+  padding: 0.2rem 0.6rem;
+  width: fit-content;
+  background: white;
+  color: var(--brown100);
+  cursor: pointer;
+  text-align: center;
+  margin-top: 1rem;
+  margin-left: 7px;
+  font-size: 0.8rem;
+  border-style: solid;
+  border-width: 2px;
+  border-radius: 5rem;
+  border-color: var(--brown100);
+}
